Fixed the myids. 3 ZK servers now

--- a/Cfg/opt/zookeeper/zookeeper-3.4.3/conf/zoo.cfg/zoo.cfg
+++ b/Cfg/opt/zookeeper/zookeeper-3.4.3/conf/zoo.cfg/zoo.cfg
@@ -26,3 +26,5 @@ clientPort=2181
 
 # quorum servers
 server.0=dice-master:2888:3888
+server.1=dice-slave1:2888:3888
+server.2=dice-slave2:2888:3888
