--- a/Cfg/opt/zookeeper/zookeeper-3.4.3/conf/zoo.cfg/zoo.cfg
+++ b/Cfg/opt/zookeeper/zookeeper-3.4.3/conf/zoo.cfg/zoo.cfg
@@ -9,7 +9,7 @@ syncLimit=5
 # the directory where the snapshot is stored.
 # do not use /tmp for storage, /tmp here is just 
 # example sakes.
-dataDir=/h12/zookeeper
+dataDir=/zookeeper_data
 # the port at which the clients will connect
 clientPort=2181
 #
